# Paytm_Open_Api

./: .gitignore  Histroy.txt  Histroy_bt.txt  Histroy_lcd.txt  Histroy_pkt.txt  README.md
Code/kernel/ZX800SG_SA/: bcfg  cp.map
Code/kernel/ZX800SG_SA/inc/: core_config.h  kernel_version.h
Code/sdk/: CMakeLists.txt  build.bat  download.bat  file_upload.json
Code/sdk/app/: CMakeLists.txt
Code/sdk/app/paytm_api/: CMakeLists.txt
Code/sdk/app/paytm_api/inc/: paytm_audio_api.h  paytm_battery_api.h  paytm_bt_audio_api.h  paytm_button_api.h  paytm_debug_uart_api.h  paytm_dev_api.h  paytm_dev_info_api.h  paytm_file_api.h  paytm_http_api.c  paytm_http_api.h  paytm_lcd_api.h  paytm_led_api.h  paytm_loc_api.h  paytm_mqtt_api.h  paytm_msg_api.h  paytm_net_api.h  paytm_ntp_api.h  paytm_sim_api.h  paytm_ssl_api.h  paytm_sys_api.h  paytm_tls_verify.h  paytm_typedef.h
Code/sdk/app/paytm_api/src/: app_main.c  mqtt_demo_1.c  server_ca_cert.c
Code/sdk/app/paytm_api/src/demo/: ali_mqtt_demo.c  audio_demo.c  battery_demo.c  bt_audio_demo.c  button_demo.c  devSys_demo.c  filesystem_demo.c  http_demo.c  json_demo.c  led_demo.c  mqtt_demo.c  net_demo.c  ntp_demo.c  paytm_demo.c  sim_demo.c  system_335_demo.img  system_343_demo.img  tasks_demo.c  timer_demo.c
Code/sdk/cmake/: core_config.cmake  extension.cmake  toolchain-gcc.cmake
Code/sdk/components/: CMakeLists.txt
Code/sdk/components/inc/: at_api.h  audio_api.h  camera_api.h  drv_adc.h  drv_camera.h  drv_ccid.h  drv_def.h  drv_i2c.h  drv_iomux.h  drv_keypad.h  drv_pwm.h  drv_rtc.h  drv_serial.h  drv_uart.h  drv_usb.h  flash_api.h  fota_api.h  fs_api.h  gpio_api.h  i2cc_api.h  lcd_api.h  mfpr.h  mfpr_api.h  ntp_api.h  osi_api.h  osi_compiler.h  osi_fifo.h  paho_mqtt_api.h  qrcode.h  spi_api.h  tts_player.h  typedef.h
Code/sdk/components/inc/lcd/: drv_lcd.h  drv_lcd_desc.h  drv_lcd_id.h  drv_lcd_panel.h  drv_panel_common.h  hal_lcd_dma.h
Code/sdk/components/lwip/arch/: cc.h  lwipopts.h  lwipopts_1802.h  lwipopts_alios.h  lwipopts_crane.h  lwipopts_nb.h  lwippools.h  sys_arch.h
Code/sdk/components/lwip/ipsec/: ipsec.h  ipsec_aes.h  ipsec_ah.h  ipsec_des.h  ipsec_esp.h  ipsec_md5.h  ipsec_sa.h  ipsec_sha1.h  ipsec_types.h  ipsec_util.h  ipsecdev.h
Code/sdk/components/lwip/ipv4/: ip4.h  ip4_addr.h  ip_nat.h
Code/sdk/components/lwip/ipv6/: dhcp6.h  icmp6.h  ip6.h  ip6_addr.h  nd6.h
Code/sdk/components/lwip/lwip/: api.h  api_msg.h  debug.h  dhcpd_api.h  dns.h  inet_chksum.h  ip.h  ip_addr.h  lwip_api.h  lwip_minis.h  lwip_stats.h  mem.h  netdb.h  netif.h  netifapi.h  opt.h  pbuf.h  sockets.h  sys.h  tcp.h  tcp_impl.h  tcpip.h  tft.h  udp.h
Code/sdk/components/lwip/netif/: etharp.h  net_bridge.h  netif_td.h  netif_td_api.h  netif_wifi_in.h
Code/sdk/components/mbedtls/include/: asros_mbedtls_config.h  asros_mbedtls_platform.h  asros_mbedtls_platform_alt.h
Code/sdk/components/mbedtls/include/mbedtls/: build_info.h  config.h  net_sockets.h  platform.h  ssl.h  threading.h  timing.h  x509_crt.h
Code/sdk/components/net/: CMakeLists.txt
Code/sdk/components/net/httpclient/: CMakeLists.txt
Code/sdk/components/net/httpclient/inc/: httpclient.h
Code/sdk/components/net/httpclient/src/: httpclient.c
Code/sdk/components/net/json/: CMakeLists.txt
Code/sdk/components/net/json/cJSON/: cJSON.c
Code/sdk/components/net/pahomqtt/: CMakeLists.txt
Code/sdk/components/net/pahomqtt/inc/: mqtt_config.h  mqtt_defconfig.h  mqtt_error.h  mqtt_log.h  mqttclient.h  network.h  platform_memory.h  platform_mutex.h  platform_net_socket.h  platform_thread.h  platform_timer.h
Code/sdk/components/net/pahomqtt/src/: MQTTConnectClient.c  mqtt_list.c  mqtt_sign.c  mqttclient.c  nettype_tcp.c  nettype_tls.c  network.c  platform_memory.c  platform_mutex.c  platform_net_socket.c  platform_thread.c  platform_timer.c
Code/sdk/components/newlib/include/sys/: select.h
Code/sdk/examples/: adc_example.c  ali_mqtt_example.c  audio_example.c  cpp_example.cpp  file_example.c  flash_example.c  gpio_example.c  hello_world.c  httpc_example.c  i2c_example.c  paho_mqtt_example.c  serial_example.c  soundbox.c  spi_example.c  ssl_example.c  uart_example.c  wdt_example.c
Code/sdk/ldscripts/: app_flashimg.ld  app_flashimg_xip.ld
Code/sdk/tools/: app_padding.py  core_launch.bat  download_modify.py
FW/BT/: BT_V013.ufw  BT_V014.ufw  BT_V015.ufw  BT_V016.ufw  BT_V017.ufw  BT_V018.ufw  BT_V019.ufw  BT_V020.ufw  BT_V021.ufw  BT_V023.ufw  BT_V024.ufw  BT_V025.ufw  History_fw_bt.txt
Tools/aboot/: aboot.json.example  nw_100_percent.pak  nw_200_percent.pak
Tools/aboot/config/flash/: MEM_SIMULATION_FLASH_1MB.json  QSPI_NOR_2MB_B64KB_S4KB_P256.json  QSPI_NOR_8X2MB_B64KB_S4KB_P256.json  SPI_NOR_2MB_B64KB_S4KB_P256.json  SPI_NOR_8MB_B64KB_S4KB_P256.json
Tools/aboot/config/partition/: ASR1602_SINGLE_FLASH_LAYOUT_open_02MB.json  ASR1602_SINGLE_FLASH_LAYOUT_open_04MB.json  CRANEL_SINGLE_FLASH_LAYOUT.json  CRANEL_SINGLE_FLASH_LAYOUT_04M.json  CRANEL_SINGLE_FLASH_LAYOUT_04M_AT.json  CRANEL_SINGLE_FLASH_LAYOUT_08M.json  CRANEL_SINGLE_FLASH_LAYOUT_08M_TTS.json  CRANEW_CR5_FLASH_LAYOUT.json  CRANEW_MCU_DUAL_FLASH_LAYOUT.json  CRANE_SINGLE_FLASH_LAYOUT.json  CRANE_SINGLE_FLASH_LAYOUT_08M.json  CRANE_SINGLE_FLASH_LAYOUT_16M.json
Tools/aboot/config/product/: ASR1602_EVB.json  ASR_CRANEL_EVB.json  ASR_CRANEL_EVB_04M.json  ASR_CRANEL_EVB_08M.json  ASR_CRANEL_EVB_08M_TTS.json  ASR_CRANE_EVB.json  ASR_CRANE_EVB_08M.json  ASR_CRANE_EVB_16M.json
Tools/aboot/config/template/: ASR1602_TEMPLATE_open.json  CRANEL_A0_TEMPLATE.json  CRANEL_A0_TEMPLATE_04M.json  CRANEL_A0_TEMPLATE_08M.json  CRANE_EVB.json  SC2_EVB.json  SC2_MEM_EVB.json
Tools/aboot/images/: README.json
Tools/aboot/locales/: af.pak  am.pak  ar-XB.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  en-XA.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  ms.pak.info  nb.pak  nl.pak  pl.pak  (+18 more)
Tools/adiff/: README.docx  adiff_lnx
(+45 files in other folders)
